# hello

./: .gitignore  README.md  pyproject.toml  test.awk
src/hello/: main.py
